# 4WM

./: CMakeLists.txt  TrackReplayInput - Copy - Copy - Copy.csv  TrackReplayInput_Brakes.csv  TrackReplayInput_Steer.csv  TrackReplayInput_TPS.csv  main.cpp  test.csv  test_speed.csv
Analysis/: SolverSettings.cpp  SolverSettings.h  SolversFactory.cpp  SolversFactory.h  TimeDomainSolution.cpp  TimeDomainSolution.h
Analysis/internal_solvers/: Integrators.cpp  Integrators.h  Interpolators.cpp  Interpolators.h  RootFinding.cpp  RootFinding.h
Design/: Aerodynamics.cpp  Aerodynamics.h  Brake.cpp  Brake.h  Chassis.cpp  Chassis.h  Engine.cpp  Engine.h  Tire.cpp  Tire.h  VehicleFactory.cpp  VehicleFactory.h  VehicleSetup.cpp  VehicleSetup.h
Inputs/: CustomSteer.cpp  CustomSteer.h  LongitudinalControlInput.cpp  LongitudinalControlInput.h  SimulationFactory.cpp  SimulationFactory.h  SimulationInput.cpp  SimulationInput.h  SteeringInput.cpp  SteeringInput.h  StepSteer.cpp  StepSteer.h
Tools/data_stream/: DataStream.cpp  DataStream.h
